crates/procenv/tests/compile_fail/unit_struct_not_supported.rs
//! Test: EnvConfig cannot be derived on unit structs

use procenv::EnvConfig;

#[derive(EnvConfig)]
struct Config;

fn main() {}
